# BESSTY

./: DEPLOY.md  README.md  iso_9613-2.txt
.claude/: launch.json  settings.local.json
Examples/: extract_demo_data.py
Front end mock up/: WTG BESS Noise Modeller v2.html  WTG BESS Noise Modeller v3.html  WTG BESS Noise Modeller.html  app-v2.jsx  app-v3.jsx  app.jsx  data.jsx  map-v2.jsx  map-v3.jsx  map.jsx  markers-v2.jsx  markers.jsx  panels-v2.jsx  panels-v3.jsx  panels.jsx
Import data/: 0122-5877_V03 - V163-4_5MW Third Octaves.xlsx  GE 3.6-137 Acoustic specification.xlsx  TeslaMegaPac.xlsx
docs/: architecture.md  auto-diff-strategy.md  firestore-schema.md  roadmap.md  solver-design.md
solver/: Cargo.toml  README.md
solver/src/: dual.rs  lib.rs  spectrum.rs  units.rs
solver/src/iso9613/: annex_d.rs  atmosphere.rs  divergence.rs  mod.rs
solver/src/iso9613/barrier/: diffraction.rs  mod.rs  path.rs
solver/src/iso9613/ground/: functions.rs  general.rs  mod.rs
solver/tests/: case_01_divergence.rs  case_02_ground.rs  case_03_single_barrier.rs  case_04_multi_edge_barrier.rs  case_05_annex_d_wtg_flat.rs  case_06_annex_d_wtg_concave.rs
tools/: import_catalog.py
validation/: README.md  TarongWF validation data.xlsx  case-01-divergence-only.md  case-02-flat-ground-general-method.md  case-03-single-barrier.md  case-04-multi-edge-barrier.md  case-05-annex-d-wtg-flat.md  case-06-annex-d-wtg-concave.md
web/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
web/src/: App.js  (+4 more)
(+70 files in other folders)
