[package]
name = "beesty-solver"
version = "0.1.0"
edition = "2021"
description = "ISO 9613-2:2024 outdoor noise solver with forward-mode AD, targeting WebAssembly."
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
smallvec = "1.13"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"

[dev-dependencies]
approx = "0.5"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[profile.bench]
inherits = "release"
